--- a/PalTripAdvisor/DataLayer/DataLayer.csproj
+++ b/PalTripAdvisor/DataLayer/DataLayer.csproj
@@ -50,12 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="CurrenciesExchange.cs">
+    <Compile Include="CurrenciesExchanx.cs">
       <DependentUpon>PalTripAdvisorEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Currency.cs">
       <DependentUpon>PalTripAdvisorEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CurrencyExchangeResponseModel.cs" />
     <Compile Include="PalTripAdvisorEntities.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -75,6 +76,8 @@
       <DependentUpon>PalTripAdvisorEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Respositories\CurrencyExchangeRepository.cs" />
+    <Compile Include="Respositories\PointOfInterestRepository.cs" />
     <Compile Include="sysdiagram.cs">
       <DependentUpon>PalTripAdvisorEntities.tt</DependentUpon>
     </Compile>
@@ -86,7 +89,9 @@
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="App.Config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="PalTripAdvisorEntities.edmx.diagram">
       <DependentUpon>PalTripAdvisorEntities.edmx</DependentUpon>
@@ -98,6 +103,7 @@
       <LastGenOutput>PalTripAdvisorEntities.Context.cs</LastGenOutput>
       <DependentUpon>PalTripAdvisorEntities.edmx</DependentUpon>
     </Content>
+    <Content Include="PalTripAdvisorEntities.edmx.sql" />
     <Content Include="PalTripAdvisorEntities.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>PalTripAdvisorEntities.edmx</DependentUpon>
