fix self dependecies issue

--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -17,7 +17,14 @@
   </system.web>
   <system.serviceModel>
     <behaviors>
-      
+      <serviceBehaviors>
+        <behavior name="samplewcf.Service1Behavior">
+          <!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
+          <serviceMetadata httpsGetEnabled="True" httpGetEnabled="true"/>
+          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+      </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="restfullBehavior">
           <webHttp />
@@ -25,8 +32,9 @@
       </endpointBehaviors>
     </behaviors>
     <services>
-      <service name="PalTripAdvisor.PointsOfInterest">
-        <endpoint address="" binding="webHttpBinding" contract="PalTripAdvisor.IPointsOfInterest" bindingConfiguration="" behaviorConfiguration="restfullBehavior"></endpoint>
+      <service name="PalTripAdvisor.PointsOfInterest" behaviorConfiguration="samplewcf.Service1Behavior">
+        <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IPointsOfInterest" behaviorConfiguration="restfullBehavior"></endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
     </services>
     <protocolMapping>
