--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -1,12 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-   
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
