add currency exchange service

--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -35,6 +35,9 @@
         <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IPointsOfInterest" behaviorConfiguration="restfullBehavior"></endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
+      <service name="PalTripAdvisor.CurrencyExchange">
+        <endpoint address="soap" binding="basicHttpBinding" contract="PalTripAdvisor.ICurrencyExchange"/>
+      </service>
     </services>
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
