--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -1,9 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="swaggerwcf" type="SwaggerWcf.Configuration.SwaggerWcfSection, SwaggerWcf" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+
+  <swaggerwcf>
+    <tags>
+      <tag name="LowPerformance" visible="false" />
+    </tags>
+    <settings>
+      <setting name="InfoDescription" value="Sample Service to test SwaggerWCF" />
+      <setting name="InfoVersion" value="0.0.1" />
+      <setting name="InfoTermsOfService" value="Terms of Service" />
+      <setting name="InfoTitle" value="SampleService" />
+      <setting name="InfoContactName" value="Abel Silva" />
+      <setting name="InfoContactUrl" value="http://github.com/abelsilva" />
+      <setting name="InfoContactEmail" value="no@e.mail" />
+      <setting name="InfoLicenseUrl" value="https://github.com/abelsilva/SwaggerWCF/blob/master/LICENSE" />
+      <setting name="InfoLicenseName" value="Apache License" />
+    </settings>
+  </swaggerwcf>
   <connectionStrings>
     <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -16,33 +35,43 @@
   </system.web>
   <system.serviceModel>
     <behaviors>
-      <serviceBehaviors>
-        <behavior name="samplewcf.Service1Behavior">
-          <!-- To avoid disclosing metadata information, set the value below to false and remove the metadata endpoint above before deployment -->
-          <serviceMetadata httpsGetEnabled="True" httpGetEnabled="true"/>
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-        </behavior>
-      </serviceBehaviors>
       <endpointBehaviors>
         <behavior name="restfullBehavior">
-          <webHttp />
+          <webHttp automaticFormatSelectionEnabled="true" />
+        </behavior>
+        <behavior name="soapBehavior">
+          <soapProcessing />
         </behavior>
       </endpointBehaviors>
+      <serviceBehaviors>
+        <behavior name="samplewcf.Service1Behavior">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+      </serviceBehaviors>
     </behaviors>
     <services>
       <service name="PalTripAdvisor.PointsOfInterest" behaviorConfiguration="samplewcf.Service1Behavior">
         <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IPointsOfInterest" behaviorConfiguration="restfullBehavior"></endpoint>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
+      <service name="PalTripAdvisor.GetClosestHotels" behaviorConfiguration="samplewcf.Service1Behavior">
+        <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IGetClosestHotels" behaviorConfiguration="restfullBehavior"></endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+      </service>
       <service name="PalTripAdvisor.CurrencyExchange">
-        <endpoint address="soap" binding="basicHttpBinding" contract="PalTripAdvisor.ICurrencyExchange"/>
+        <endpoint address="soap" binding="basicHttpBinding" contract="PalTripAdvisor.ICurrencyExchange" />
       </service>
     </services>
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
@@ -59,12 +88,13 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
