--- a/PalTripAdvisor/CurrencyFeed/packages.config
+++ b/PalTripAdvisor/CurrencyFeed/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="NLog" version="4.5.5" targetFramework="net471" />
   <package id="Quartz" version="3.0.5" targetFramework="net471" />
   <package id="Topshelf" version="4.0.4" targetFramework="net471" />
