fix json format

--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -37,7 +37,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restfullBehavior">
-          <webHttp automaticFormatSelectionEnabled="true" />
+          <webHttp />
         </behavior>
         <behavior name="soapBehavior">
           <soapProcessing />
@@ -48,7 +48,7 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
-        <behavior name="">
+        <behavior name="samplewcf.Service2Behavior">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
@@ -57,11 +57,9 @@
     <services>
       <service name="PalTripAdvisor.PointsOfInterest" behaviorConfiguration="samplewcf.Service1Behavior">
         <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IPointsOfInterest" behaviorConfiguration="restfullBehavior"></endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
-      <service name="PalTripAdvisor.GetClosestHotels" behaviorConfiguration="samplewcf.Service1Behavior">
+      <service name="PalTripAdvisor.GetClosestHotels" behaviorConfiguration="samplewcf.Service2Behavior">
         <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IGetClosestHotels" behaviorConfiguration="restfullBehavior"></endpoint>
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
       </service>
       <service name="PalTripAdvisor.CurrencyExchange">
         <endpoint address="soap" binding="basicHttpBinding" contract="PalTripAdvisor.ICurrencyExchange" />
