--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -40,7 +40,7 @@
           <webHttp />
         </behavior>
         <behavior name="soapBehavior">
-          <soapProcessing />
+          <webHttp />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
@@ -52,6 +52,10 @@
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
+        <behavior name="samplewcf.Service3Behavior">
+          <serviceMetadata />
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
@@ -61,14 +65,18 @@
       <service name="PalTripAdvisor.GetClosestHotels" behaviorConfiguration="samplewcf.Service2Behavior">
         <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IGetClosestHotels" behaviorConfiguration="restfullBehavior"></endpoint>
       </service>
-      <service name="PalTripAdvisor.CurrencyExchange">
-        <endpoint address="soap" binding="basicHttpBinding" contract="PalTripAdvisor.ICurrencyExchange" />
+      <service name="PalTripAdvisor.CurrencyExchange" behaviorConfiguration="samplewcf.Service2Behavior">
+        <endpoint address="" binding="webHttpBinding" contract="PalTripAdvisor.ICurrencyExchange" behaviorConfiguration="soapBehavior"></endpoint>
+      </service>
+      
+      <service name="SwaggerWcf.SwaggerWcfEndpoint">
+        <endpoint address="docs" binding="webHttpBinding" contract="SwaggerWcf.ISwaggerWcfEndpoint" />
       </service>
     </services>
     <protocolMapping>
       <add binding="basicHttpsBinding" scheme="https" />
     </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
 
   </system.serviceModel>
   <system.webServer>
@@ -78,21 +86,39 @@
         Set to false before deployment to avoid disclosing web app folder information.
       -->
     <directoryBrowse enabled="true" />
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
-      <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness32" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
+    
 
-  </system.webServer>
+  <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers></system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
