--- a/PalTripAdvisor/PalTripAdvisor/PalTripAdvisor.csproj
+++ b/PalTripAdvisor/PalTripAdvisor/PalTripAdvisor.csproj
@@ -118,8 +118,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    
     <Content Include="App_Start\Global.asax" />
+    <Content Include="CurrencyExchange.asmx" />
     <Content Include="CurrencyExchange.svc" />
     <Content Include="GetClosestHotels.svc" />
     <Content Include="PointsOfInterest.svc" />
@@ -131,7 +131,10 @@
     <Compile Include="App_Start\Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    
+    <Compile Include="CurrencyExchange.asmx.cs">
+      <DependentUpon>CurrencyExchange.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="CurrencyExchange.svc.cs">
       <DependentUpon>CurrencyExchange.svc</DependentUpon>
     </Compile>
@@ -151,7 +154,6 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
