--- a/PalTripAdvisor/PalTripAdvisor/PalTripAdvisor.csproj
+++ b/PalTripAdvisor/PalTripAdvisor/PalTripAdvisor.csproj
@@ -122,6 +122,7 @@
     <Content Include="CurrencyExchange.asmx" />
     <Content Include="CurrencyExchange.svc" />
     <Content Include="GetClosestHotels.svc" />
+    <Content Include="GetWeather.asmx" />
     <Content Include="PointsOfInterest.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -141,10 +142,15 @@
     <Compile Include="GetClosestHotels.svc.cs">
       <DependentUpon>GetClosestHotels.svc</DependentUpon>
     </Compile>
+    <Compile Include="GetWeather.asmx.cs">
+      <DependentUpon>GetWeather.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ICurrencyExchange.cs" />
     <Compile Include="IGetClosestHotels.cs" />
     <Compile Include="IPointsOfInterest.cs" />
     <Compile Include="Models\CurrencyExchangeResponseDomainModel.cs" />
+    <Compile Include="Models\WeatherResponseDomainObject.cs" />
     <Compile Include="PointsOfInterest.svc.cs">
       <DependentUpon>PointsOfInterest.svc</DependentUpon>
     </Compile>
