--- a/PalTripAdvisor/CurrencyFeed/App.config
+++ b/PalTripAdvisor/CurrencyFeed/App.config
@@ -6,7 +6,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
