--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -24,7 +24,7 @@
     </settings>
   </swaggerwcf>
   <connectionStrings>
-    <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="PalTripAdvisorServicesEntities" connectionString="metadata=res://*/PalTripAdvisorEntities.csdl|res://*/PalTripAdvisorEntities.ssdl|res://*/PalTripAdvisorEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=PalTripAdvisorServices;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
