remove unnecessary service, add help page

--- a/PalTripAdvisor/PalTripAdvisor/Web.config
+++ b/PalTripAdvisor/PalTripAdvisor/Web.config
@@ -37,7 +37,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="restfullBehavior">
-          <webHttp />
+          <webHttp helpEnabled="true" />
         </behavior>
         <behavior name="soapBehavior">
           <webHttp />
@@ -64,9 +64,6 @@
       </service>
       <service name="PalTripAdvisor.GetClosestHotels" behaviorConfiguration="samplewcf.Service2Behavior">
         <endpoint address="json" binding="webHttpBinding" contract="PalTripAdvisor.IGetClosestHotels" behaviorConfiguration="restfullBehavior"></endpoint>
-      </service>
-      <service name="PalTripAdvisor.CurrencyExchange" behaviorConfiguration="samplewcf.Service2Behavior">
-        <endpoint address="" binding="webHttpBinding" contract="PalTripAdvisor.ICurrencyExchange" behaviorConfiguration="soapBehavior"></endpoint>
       </service>
       
       <service name="SwaggerWcf.SwaggerWcfEndpoint">
